0 Enable virtual threads